# tetris

./: Cargo.toml  LICENSE  README.md
.github/workflows/: static.yml
src/: board.rs  display.rs  game.rs  lib.rs  pieces.rs  utils.rs
www/: index.html  index.js  package.json  pnpm-lock.yaml  style.css  webpack.config.js
