[package]
name = "tetris"
version = "0.1.0"
authors = ["languint <longuint@proton.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = ["Element", "HtmlDocument", "NodeList", "Window", "Document", "DomTokenList", "HtmlCollection", "HtmlElement", "CanvasRenderingContext2d", "HtmlCanvasElement", "CssStyleDeclaration", "HtmlHtmlElement", "HtmlParagraphElement"] }
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
